about complete and projects started

--- a/home.html
+++ b/home.html
@@ -63,7 +63,7 @@
                 <div class="hero flex-center-column mb-3">
                     <p>Hi, Welcome to portfolio of</p>
                     <h1 class="mb-4">Ruchira Dias</h1>
-                    <img src="./images/portfolio.jpg" alt="wallpaper" class="wallpaper p-2">
+                    <img src="./images/wallpaper.jpg" alt="wallpaper" class="wallpaper p-2">
                     <p class="discription mt-4 p-md-2">I am a 2nd year BSc. Computer Science student with exceptional passion for problem solving using programming.</p>
                     <div class="btn btn-dark">
                         <a href="./resume/Ruchira Dias - 2021 Resume.pdf" downlaod>Download Resume</a>
