--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
             <!-- nav -->
                 <div class="collapse navbar-collapse" id="navbar-content">
                     <ul class="navbar-nav ml-lg-auto">
-                        <li class="nav-item active">
+                        <li class="nav-item">
                             <a href="home.html" class="nav-link">Home</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item  active">
                             <a href="about.html" class="nav-link">About</a>
                         </li>
                         <li class="nav-item">
@@ -55,19 +55,43 @@
                         </li>
                     </ul>
                 </div>
-            </nav> 
+        </nav> 
 
-        <section class="container flex-center">
-        <!-- hero -->
-            <div id="hero" class="flex-center">
-                <div class="hero flex-center-column mb-3">
-                    <p>Hi, Welcome to portfolio of</p>
-                    <h1 class="mb-4">Ruchira Dias</h1>
-                    <img src="./images/portfolio.jpg" alt="wallpaper" class="wallpaper p-2">
-                    <p class="discription mt-4 p-md-2">I am a 2nd year BSc. Computer Science student with exceptional passion for problem solving using programming.</p>
-                    <div class="btn btn-dark">
-                        <a href="./resume/Ruchira Dias - 2021 Resume.pdf" downlaod>Download Resume</a>
+        <section class="container flex-center-column">
+        <!-- projects -->
+            <div id="projects" class="w-100 mt-5">
+                <div class="projects mb-3 row flex-center">
+                    <div class="col-12">
+                        <h1>Projects</h1>
                     </div>
+                    <div class="col-12 mt-3 row">
+                        <div class="col-12 row flex-center">
+                            <div class="col-6">
+                                <div class="flex-center-column">
+                                    <h3>DreamXV</h3>
+                                    <h5 class="mb-4">Mobile Application</h5>
+                                    <img src="./images/mobile.jpg" alt="application" class="w-50">
+                                </div>                            
+                            </div>
+                            <div class="col-6">
+                                <div class="row">
+                                    <p>Decision Support System for predict positions for rugby players using their player stats.</p>
+                                    <div class="col-3">
+                                        <img src="./logo/python.png" alt="python logo" class="w-100">
+                                    </div>
+                                    <div class="col-3">
+                                        <img src="./logo/flask.png" alt="flask logo" class="w-100">
+                                    </div>
+                                    <div class="col-3">
+                                        <img src="./logo/pandas.png" alt="pandas logo" class="w-100">
+                                    </div>
+                                    <div class="col-3">
+                                        <img src="./logo/skl.png" alt="scikit learn logo" class="w-100">
+                                    </div>
+                                </div>                            
+                            </div>                           
+                        </div>
+                    </div>                   
                 </div>
             </div>
         </section>
