updated style sheet and about page

--- a/about.html
+++ b/about.html
@@ -130,16 +130,18 @@
                     <div class="col-12 mb-3">
                         <h1>Experience</h1>
                     </div>
-                    <div class="col-12 row flex-center border border-light p-5">
-                        <div class="col-lg-6 p-2">
-                            <div class="flex-center">
-                                <img src="./logo/ieeecs.png" alt="ieee cs logo" class="ieeecs-logo">
+                    <div class="col-12 flex-center p-5">
+                        <div class="col-12 row flex-center border border-light p-5">
+                            <div class="col-lg-6 p-2">
+                                <div class="flex-center">
+                                    <img src="./logo/ieeecs.png" alt="ieee cs logo" class="ieeecs-logo">
+                                </div>
                             </div>
-                        </div>
-                        <div class="col-lg-6 mt-3 flex-center-column">
-                            <h3>Vice chairperson</h3>
-                            <h5>(2020 -2021)</h5>
-                            <p class="exp-discription">Have experience on organizing IT related events such as workshops, hackethons, ideathons, etc.</p>
+                            <div class="col-lg-6 mt-3 flex-center-column">
+                                <h3>Vice chairperson</h3>
+                                <h5>(2020 -2021)</h5>
+                                <p class="exp-discription">Have experience on organizing IT related events such as workshops, hackethons, ideathons, etc.</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -182,7 +184,7 @@
                                     <h3>Technologies</h3>
                                 </div>
                                 <div class="col-4">
-                                    <img src="./logo/javafx.png" alt="javafx logo" class="w-100">
+                                    <img src="./logo/JavaFX.png" alt="javafx logo" class="w-100">
                                 </div>
                                 <div class="col-4">
                                     <img src="./logo/flask.png" alt="flask logo" class="w-100">
