--- a/projects.html
+++ b/projects.html
@@ -165,7 +165,7 @@
                                         <img src="./logo/java.png" alt="java logo" class="w-100">
                                     </div>
                                     <div class="col-3">
-                                        <img src="./logo/javafx.png" alt="javafx logo" class="w-100">
+                                        <img src="./logo/JavaFX.png" alt="javafx logo" class="w-100">
                                     </div>
                                     <div class="col-3">
                                         <img src="./logo/git.png" alt="git logo" class="w-100">
@@ -225,7 +225,7 @@
                                         <img src="./logo/java.png" alt="java logo" class="w-100">
                                     </div>
                                     <div class="col-3">
-                                        <img src="./logo/javafx.png" alt="javafx logo" class="w-100">
+                                        <img src="./logo/JavaFX.png" alt="javafx logo" class="w-100">
                                     </div>
                                     <div class="col-3">
                                         <img src="./logo/intellij.png" alt="intellij logo" class="w-100">
